WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244862
BlobURLHandle doesn't work as intended for opaque origin Blob URLs
https://bugs.webkit.org/show_bug.cgi?id=244862
Summary
BlobURLHandle doesn't work as intended for opaque origin Blob URLs
Chris Dumez
Reported
2022-09-06 15:18:37 PDT
BlobURLHandle doesn't work as intended for opaque origin Blob URLs. This is causing some of the subtests in imported/w3c/web-platform-tests/FileAPI/url/sandboxed-iframe.html to fail in WebKit.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2022-09-06 15:24:24 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/4075
EWS
Comment 2
2022-09-07 09:28:51 PDT
Committed
254238@main
(2953e9903dd4): <
https://commits.webkit.org/254238@main
> Reviewed commits have been landed. Closing PR #4075 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-09-07 09:29:21 PDT
<
rdar://problem/99652964
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug